# gif_player_wasm

./: Cargo.toml  README.md
examples/: gif_player.js  gif_player_wasm.js  gif_player_wasm_bg.wasm
examples/controls/: index.html  performance_test.html
examples/simple/: index.html
src/: lib.rs
