[package]
name = "gif-player-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["gif"]}

wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3"
once_cell = "1.18.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'CanvasRenderingContext2d', 
  'ImageData',
  'AbortSignal'
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true